js/js.translator/testData/incremental/invalidation/interfaceWithDefaultParams/lib2/l2test.0.kt
private fun test(setepId: Int, i: InterfaceA): Int {
    return i.functionA(setepId, "", false)
}

fun testDefaltParam(setepId: Int): Int {
    return test(setepId, ClassA())
}
